--- a/style/style.css
+++ b/style/style.css
@@ -67,5 +67,9 @@ html{
     width: 1rem;
     height: 1rem;
 
-    margin: 1rem;
+    padding: 1rem;
+
+    text-align: center;
+
+    cursor: pointer;
 }
